# optimal_splitk

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  design.rst  index.rst  requirements.txt
docs/_templates/: minimal_module.rst  module.rst
docs/src/: api.rst  conf.py  design.rst  index.rst
docs/src/_templates/: attribute.rst  base.rst  class.rst  member.rst  method.rst
examples/: example.py  sensitivity-split-split.py  sensitivity.py
examples/assets/: Grass2022_max_model.xlsx  design_comb.xlsx  design_optim.xlsx  ex5_trinca_gilmour.xlsx  model.xlsx
examples/notebooks/: Trinca_Gilmour_comparison.ipynb  Trinca_Gilmour_eta2.ipynb  figures_motivating_example.ipynb  paper_figures copy.ipynb  paper_figures.ipynb  paper_figures_mad.ipynb  paper_figures_mad_optim.ipynb
src/doe_gensplit/: doe.py  encode.py  init.py  optimizers.py  utils.py  validation.py
src/doe_gensplit/optim/: doptim.py  ioptim.py
src/optimal_splitk/: doe.py  utils.py
src/optimal_splitk/optim/: ioptim.py
